# oh-shit-what-a-mess

./: Cargo.toml  LICENSE  README.md  README.ru.md  install.sh
.claude/reports/: 2026-06-22-oswam-v1.md  2026-06-22-workspace-risk-never.md
.context/: architecture.md  checks.json  checks.md  commits.md  conventions.md  stack.md  testing.md
.context/specs/: 2026-06-22-oswam.md
oswam-cli/: Cargo.toml
oswam-cli/src/: cli.rs  commands.rs  context.rs  main.rs  output.rs  perform.rs
oswam-core/: Cargo.toml
oswam-core/src/: category.rs  config.rs  delete.rs  docker.rs  facts.rs  format.rs  fsops.rs  lib.rs  manifest.rs  native.rs  paths.rs  privilege.rs  process.rs  risk.rs  scan.rs  select.rs  size.rs  snapshots.rs
oswam-tui/: Cargo.toml
oswam-tui/src/: app.rs  detect.rs  event.rs  input.rs  lib.rs  panels.rs  query.rs  render.rs  run.rs  screens.rs  theme.rs
oswam-tui/src/snapshots/: oswam_tui__render__tests__help_overlay.snap  oswam_tui__render__tests__main_layout_dark.snap
oswam-tui/tests/: behavior.rs  snapshots.rs
oswam-tui/tests/snapshots/: snapshots__confirm_modal.snap  snapshots__help_overlay.snap  snapshots__main_layout_dark.snap  snapshots__scanning.snap  snapshots__welcome.snap
