[package]
name = "oswam-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "oswam"
path = "src/main.rs"

[dependencies]
oswam-core = { path = "../oswam-core" }
oswam-tui = { path = "../oswam-tui" }
clap = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
dirs = { workspace = true }
