[package]
name = "oswam-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
glob = { workspace = true }
dirs = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tempfile = "3"
