[package]
name = "oswam-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
oswam-core = { path = "../oswam-core" }
ratatui = { workspace = true }
crossterm = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
